@@ -16,15 +16,15 @@ buildscript{
     }
 
     dependencies{
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
+        classpath "com.mobidevelop.robovm:robovm-gradle-plugin:2.3.14"
         classpath "com.github.Anuken.Arc:packer:$arcHash"
         classpath "com.github.Anuken.Arc:arc-core:$arcHash"
     }
 }
 
 plugins{
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
-    id "org.jetbrains.kotlin.kapt" version "1.4.32"
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
+    id "org.jetbrains.kotlin.kapt" version "1.5.31"
 }
 
 allprojects{
@@ -35,11 +35,11 @@ allprojects{
 
     ext{
         versionNumber = '7'
-        if(!project.hasProperty("versionModifier")) versionModifier = 'dev'
+        if(!project.hasProperty("versionModifier")) versionModifier = 'pre-alpha'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
         steamworksVersion = '0b86023401880bb5e586bc404bedbaae9b1f1c94'
-        rhinoVersion = '099aed6c82f8094b3ba39a273b8d2ba7bdcc6443'
+        rhinoVersion = '3c6bbadf73a904eefcc28b6fd8aa742ac575e878'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -196,20 +196,21 @@ allprojects{
 
     tasks.withType(JavaCompile){
         targetCompatibility = 8
-        //TODO fix dynamically, this is a hack
-        if(System.getProperty("user.name") == "anuke"){
-            sourceCompatibility = JavaVersion.VERSION_15
-        }else{
-            sourceCompatibility = JavaVersion.VERSION_14
-        }
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
         dependsOn clearCache
 
-        options.forkOptions.jvmArgs.addAll([
+        options.forkOptions.jvmArgs += [
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
-        ])
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
     }
 }
 
@@ -224,18 +225,13 @@ configure(project(":annotations")){
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
-        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-
-        doFirst{
-            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
-        }
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
     tasks.withType(Javadoc){
         options{
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '14')
+            addStringOption('-release', '16')
         }
     }
 }
@@ -271,7 +267,7 @@ project(":ios"){
             props.load(new FileInputStream(vfile))
         }else{
             props['app.id'] = 'io.anuke.mindustry'
-            props['app.version'] = '6.0'
+            props['app.version'] = '7.0'
             props['app.mainclass'] = 'mindustry.IOSLauncher'
             props['app.executable'] = 'IOSLauncher'
             props['app.name'] = 'Mindustry'
@@ -302,9 +298,8 @@ project(":core"){
 
     kapt{
         javacOptions{
-            option("-source", "14")
+            option("-source", "16")
             option("-target", "1.8")
-            option("--enable-preview")
         }
     }
 
@@ -334,7 +329,11 @@ project(":core"){
                 }
             }
             def changelogs = file("../fastlane/metadata/android/en-US/changelogs/")
-            new File(changelogs, androidVersion + ".txt").text = (result)
+            changelogs.mkdirs()
+            try{
+                new File(changelogs, androidVersion + ".txt").text = (result)
+            }catch(Exception ignored){
+            }
         }
     }
 
@@ -376,7 +375,7 @@ project(":core"){
         if(localArc() && debugged()) api arcModule("extensions:recorder")
         if(localArc()) api arcModule(":extensions:packer")
 
-        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+        annotationProcessor 'com.github.Anuken:jabel:0.6.0'
         compileOnly project(":annotations")
         kapt project(":annotations")
     }
@@ -430,6 +429,8 @@ project(":tests"){
     }
 
     test{
+        //fork every test so mods don't interact with each other
+        forkEvery = 1
         useJUnitPlatform()
         workingDir = new File("../core/assets")
         testLogging{
@@ -492,8 +493,10 @@ task deployAll{
     dependsOn "desktop:packrWindows64"
     dependsOn "desktop:packrWindows32"
     dependsOn "desktop:packrMacOS"
-    dependsOn "server:deploy"
-    dependsOn "android:deploy"
+    if(versionModifier != "steam"){
+        dependsOn "server:deploy"
+        dependsOn "android:deploy"
+    }
 }
 
 task resolveDependencies{
